refatorando swagger, tabela aluno
